--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
     "@react-native-picker/picker": "2.4.8",
+    "@reduxjs/toolkit": "^1.9.0",
+    "cosmicjs": "^4.3.1",
     "expo": "~47.0.7",
     "expo-font": "^11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-web": "~0.18.9",
-    "react-dom": "18.1.0",
-    "@expo/webpack-config": "^0.17.2"
+    "react-redux": "^8.0.5",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
