--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-progress": "^5.0.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "swr": "^1.3.0"
